Fix padding on small screens

--- a/media/css/mopidy.css
+++ b/media/css/mopidy.css
@@ -39,7 +39,8 @@ iframe {
 .feature .container,
 .action .container,
 .footer .container {
-    padding: 40px 0;
+    padding-top: 40px;
+    padding-bottom: 40px;
 }
 
 .footer {
